# Gacha-Scheduler

./: .gitignore  README.md  gacha_scheduler.py  gallery.pro  pyproject.toml  requirements.txt
.github/workflows/: build.yml
app/common/: config.py  game_config.py  game_runner.py  game_timer.py  resource.py  signal_bus.py  updater.py
app/components/: add_message_box.py  file_setting_card.py  navigation_game_widget.py  run_message_box.py  shortcut_setting_card.py  time_message_box.py  time_setting_card.py  timetable.py
app/config/: config.json
app/resource/: resource.qrc
app/resource/i18n/: gallery.it_IT.qm  gallery.it_IT.ts  gallery.zh_CN.qm  gallery.zh_CN.ts  gallery.zh_HK.qm  gallery.zh_HK.ts
app/view/: edit_interface.py  game_interface.py  main_window.py  schedule_interface.py  setting_interface.py
